# magnor

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/cluster/: mod.rs
src/common/: error.rs  mod.rs  types.rs
src/execution/: mod.rs
src/execution/operators/: mod.rs  scan.rs
src/parser/: mod.rs
