[package]
name = "magnor"
version = "0.1.0"
edition = "2024"
authors = ["Magnor Contributors"]
description = "A distributed query engine written in Rust"

[dependencies]
# Async runtime
tokio = { version = "1.36", features = ["full"] }
# Arrow for memory layout and data structures
arrow = "54.2"
arrow-schema = { version = "54.2", features = ["serde"] }
# SQL parsing
sqlparser = "0.43"
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Async traits
async-trait = "0.1"
# Concurrent data structures
dashmap = "5.5"
# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
# Error handling
thiserror = "1.0"
anyhow = "1.0"
# gRPC framework for distributed communication
tonic = "0.11"
prost = "0.12"
# Configuration
config = "0.14"

[build-dependencies]
tonic-build = "0.11"
